added %constructor-args from ConfigObject parsing and %construct attribute

--- a/src/test/resources/testBean.conf
+++ b/src/test/resources/testBean.conf
@@ -1,6 +1,7 @@
 beans {
   testBean {
     %class = hoconspring.TestBean
+    %constructor-args = [42, "lolzsy"]
     int = 5
     string = "lol"
     strIntMap {
@@ -10,7 +11,17 @@ beans {
     strSet = ["A", "B"]
     nestedBean {
       %class = hoconspring.TestBean
+      %constructor-args {
+        constrString = "wut"
+        constrInt = 1
+      }
       int = 6
+      nestedBean {
+        %class = hoconspring.TestBean
+        %construct = true
+        constrString = 2
+        constrInt = "yes"
+      }
     }
     config.%config {
       srsly = dafuq
