--- a/src/test/resources/testBean.conf
+++ b/src/test/resources/testBean.conf
@@ -19,8 +19,8 @@ beans {
       nestedBean {
         %class = hoconspring.TestBean
         %construct = true
-        constrString = 2
-        constrInt = "yes"
+        constrString = "yes"
+        constrInt = 2
       }
     }
     config.%config {
